# gzstream

./: CMakeLists.txt  ChangeLog  Copyright  README.md  dc.cpp  gzstream.h  main.cpp  sample.cpp  unzip.cpp  zip.cpp
include/: bzstream.h  fstream.h  gzstream.h
samples/: dc.cpp  sample.cpp
